css/backoffice/layout/activity-panel/_activity-panel.scss
/* ... */
/* Header */
.ibo-activity-panel--header{
	position: relative;
	background-color: $ibo-activity-panel--header--background-color;

	/* Remove hyperlinks default color */
	a{
		color: $ibo-activity-panel--tab-toolbar--text-color;
	}
}
/* Size toggler */
.ibo-activity-panel--size-toggler{
	position: absolute;
	right: $ibo-activity-panel--padding-x;
	top: 0;
	bottom: 0;
	@extend %ibo-fully-centered-content;
	color: $ibo-activity-panel--size-toggler--color;

	&:hover{
		color: $ibo-activity-panel--size-toggler--on-hover--color;
	}
}

/* Tabs togglers */
.ibo-activity-panel--tabs-togglers{
	position: relative; /* For size toggler */
	padding-left: $ibo-activity-panel--tabs-togglers--padding-x;
	padding-right: $ibo-activity-panel--tabs-togglers--padding-x;
	@extend %ibo-fully-centered-content;
}
.ibo-activity-panel--tab-toggler{
	&.ibo-is-active{
		.ibo-activity-panel--tab-title{
			background-color: $ibo-activity-panel--tab-title--is-active--background-color;
		}
	}
  &.ibo-is-draft{
    .ibo-activity-panel--tab-title-draft-indicator{
      display: initial;
    }
  }
}
/* - Specific decoration regarding the case log rank */
@each $sColor in $ibo-activity-panel--tab-toggler--caselog-highlight-colors {
	.ibo-activity-panel--tab-toggler-for-caselog-#{index($ibo-activity-panel--tab-toggler--caselog-highlight-colors, $sColor)}{
		.ibo-activity-panel--tab-title-decoration{
			background-color: $sColor;
		}
	}
}

/* Tab title */
.ibo-activity-panel--tab-title{
	padding: $ibo-activity-panel--tab-title--padding-y $ibo-activity-panel--tab-title--padding-x;
	@extend %ibo-fully-centered-content;

	&:hover{
		background-color: $ibo-activity-panel--tab-title--on-hover--background-color;
	}
}
.ibo-activity-panel--tab-title-decoration{
	display: inline-flex;
	margin-right: $ibo-activity-panel--tab-title-decoration--margin-right;
	width: $ibo-activity-panel--tab-title-decoration--width;
	height: $ibo-activity-panel--tab-title-decoration--height;
	border-radius: $ibo-activity-panel--tab-title-decoration--border-radius;
	@extend %ibo-depression-100;
}
.ibo-activity-panel--tab-title-draft-indicator{
  display: none;
  margin-left: $ibo-activity-panel--tab-title-draft-indicator--margin-x;
  @extend %ibo-font-ral-nor-50;
}
.ibo-activity-panel--tab-title-text{
	max-width: $ibo-activity-panel--tab-title-text--max-width;
	@extend %ibo-text-truncated-with-ellipsis;
}

/* Tab toolbar */
.ibo-activity-panel--tab-toolbar{
	display: none;
	flex-direction: column;
	padding-left: $ibo-activity-panel--tab-toolbar--padding-x;
	padding-right: $ibo-activity-panel--tab-toolbar--padding-x;
	background-color: $ibo-activity-panel--tab-toolbar--background-color;

	&.ibo-is-active{
		display: flex;
	}
}
.ibo-activity-panel--tab-toolbar-actions{
	@extend %ibo-fully-centered-content;
	justify-content: space-between;
	flex-wrap: wrap;
	height: $ibo-activity-panel--tab-toolbar-actions--height;
}
.ibo-activity-panel--tab-toolbar-left-actions,
.ibo-activity-panel--tab-toolbar-middle-actions,
.ibo-activity-panel--tab-toolbar-right-actions{
	@extend %ibo-vertically-centered-content;
}
.ibo-activity-panel--tab-toolbar-left-actions{
	.ibo-activity-panel--tab-toolbar-action{
		&:not(:first-child){
			&::before{
				content: $ibo-activity-panel--tab-toolbar-action--elements-separator-content;
				margin: 0 $ibo-activity-panel--tab-toolbar-action--elements-separator-margin-x;
			}
		}
	}
}
.ibo-activity-panel--tab-toolbar-middle-actions {
	.ibo-activity-panel--tab-toolbar-action{
		> input{
			margin-right: $ibo-activity-panel--tab-toolbar-filter--checkbox-margin-right;
		}

		&:not(:first-child){
			margin-left: $ibo-activity-panel--tab-toolbar-filter--sibling-spacing;
		}
	}
}
.ibo-activity-panel--tab-toolbar-right-actions {
	.ibo-activity-panel--tab-toolbar-info {
		> .ibo-activity-panel--tab-toolbar-info-icon {
			margin-left: $ibo-activity-panel--tab-toolbar-info-icon--margin-left;
		}

		&:not(:first-child) {
			margin-left: $ibo-activity-panel--tab-toolbar-right-actions--elements-spacing;
		}
	}
}
.ibo-activity-panel--tab-toolbar-action{
  position: relative;
	@extend %ibo-fully-centered-content;
}
.ibo-activity-panel--filter{
  cursor: pointer;
}
.ibo-activity-panel--filter-options-toggler{
  padding-left: $ibo-activity-panel--filter-options-toggler--padding-left;

  &.ibo-is-closed{
    transform: rotateX(180deg);

    + .ibo-activity-panel--filter-options{
      display: none;
    }
  }
}
.ibo-activity-panel--filter-options{
  position: absolute;
  z-index: 1; /* To be over the activity body */
  display: flex;
  flex-direction: column;
  top: $ibo-activity-panel--filter-options--top;
  left: $ibo-activity-panel--filter-options--left;
  max-width: $ibo-activity-panel--filter-options--max-width;
  padding: $ibo-activity-panel--filter-options--padding-y $ibo-activity-panel--filter-options--padding-x;
  background-color: $ibo-activity-panel--filter-options--background-color;
  border-radius: $ibo-activity-panel--filter-options--border-radius;

  @extend %ibo-elevation-300;
}
.ibo-activity-panel--filter-option{
  cursor: pointer;
  @extend %ibo-vertically-centered-content;
  @extend %ibo-text-truncated-with-ellipsis;

  &:not(:first-child){
    margin-top: $ibo-activity-panel--filter-option--sibling-spacing;
  }
}
.ibo-activity-panel--filter-option-input{
  margin-right: $ibo-activity-panel--filter-option-input--margin-right;
}



/* Body */
.ibo-activity-panel--body{
	flex-grow: 1; /* To occupy all the space not used by the header  */
	overflow: auto;
	padding: $ibo-activity-panel--body--padding-y $ibo-activity-panel--body--padding-x;
}

.ibo-activity-panel--body--placeholder{
	margin-top: $ibo-activity-panel--body--placeholder--margin-top;
}
.ibo-activity-panel--body--placeholder-image{
	@extend %ibo-fully-centered-content;

	> svg {
		width: $ibo-activity-panel--body--placeholder-image--width;
		height: inherit;
	}
}
/* ... */

